@@ -9,7 +9,7 @@ menu loops.
 """
 
 # make version for Empire
-VERSION = "1.3.8"
+VERSION = "1.3.9"
 
 
 from pydispatch import dispatcher
