@@ -1,3 +1,9 @@
+12/22/2015
+----------
+-Sync of Kevin Robertson's lateral_movement/inveigh_relay module
+-Sync stufus' exfiltration/egresscheck module
+-Added module menu dynamic sizing for prettified output
+
 12/16/2015
 ----------
 -Sync of Kevin Robertson's collection/inveigh update
